moved configs and added hyprpaper

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,13 +1,14 @@
-source = ~/.config/hypr/colors.conf
-source = ~/.config/hypr/monitors.conf
-source = ~/.config/hypr/programs.conf
-source = ~/.config/hypr/env.conf
-source = ~/.config/hypr/variables.conf
-source = ~/.config/hypr/binds.conf
-source = ~/.config/hypr/windowrules.conf
+source = ~/.config/hypr/configs/colors.conf
+source = ~/.config/hypr/configs/monitors.conf
+source = ~/.config/hypr/configs/programs.conf
+source = ~/.config/hypr/configs/env.conf
+source = ~/.config/hypr/configs/variables.conf
+source = ~/.config/hypr/configs/binds.conf
+source = ~/.config/hypr/configs/windowrules.conf
 
 # Autostart
 exec-once = waybar
+exec-once = hyprpaper
 
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
